--- a/WebApplication1/WeatherAPI.csproj
+++ b/WebApplication1/WeatherAPI.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+	<OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-	<IsPackable>true</IsPackable>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	<PackageId>RHMWeatherAPI</PackageId>
 	<Version>1.0.0</Version>
 	<Authors>rhm</Authors>
 	<Company>rhm</Company>
 	<PackageDescription>This package adds a rhm!</PackageDescription>
+	<IsPackable>true</IsPackable>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
